update figs and tables

--- a/notebooks/figures/HighK-unimodal.ipynb
+++ b/notebooks/figures/HighK-unimodal.ipynb
@@ -253,20 +253,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "row = tbl_with_ness[~tbl_with_ness['lnM'].mask][0]\n",
-    "m1_samples = np.exp(N(row['lnM'], row['e_logM'], size=n_samples)) * u.Msun\n",
-    "mass_func = mf(P=N(row['P'], row['P_err'], n_samples) * tbl_with_ness['P'].unit, \n",
-    "               K=N(row['K'], row['K_err'], n_samples) * tbl_with_ness['K'].unit,\n",
-    "               e=N(row['e'], row['e_err'], n_samples))\n",
-    "m2_mins = get_m2_min(m1_samples, mass_func)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "rnd = np.random.RandomState(seed=42)\n",
     "N = rnd.normal\n",
     "\n",
@@ -283,9 +269,16 @@
     "        continue\n",
     "        \n",
     "    m1_samples = np.exp(N(row['lnM'], row['e_logM'], size=n_samples)) * u.Msun\n",
-    "    mass_func = mf(P=N(row['P'], row['P_err'], n_samples) * tbl_with_ness['P'].unit, \n",
-    "                   K=N(row['K'], row['K_err'], n_samples) * tbl_with_ness['K'].unit,\n",
-    "                   e=N(row['e'], row['e_err'], n_samples))\n",
+    "    \n",
+    "    if row['converged']:\n",
+    "        mass_func = mf(P=N(row['P'], row['P_err'], n_samples) * tbl_with_ness['P'].unit, \n",
+    "                       K=N(row['K'], row['K_err'], n_samples) * tbl_with_ness['K'].unit,\n",
+    "                       e=N(row['e'], row['e_err'], n_samples))\n",
+    "    else:\n",
+    "        mass_func = mf(P=row['P'] * tbl_with_ness['P'].unit, \n",
+    "                       K=row['K'] * tbl_with_ness['K'].unit,\n",
+    "                       e=row['e'])\n",
+    "        mass_func = u.Quantity([mass_func] * n_samples)\n",
     "    m2_mins = get_m2_min(m1_samples, mass_func)\n",
     "\n",
     "    med_m1 = np.median(m1_samples)\n",
@@ -930,7 +923,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
