--- a/notebooks/figures/Results.ipynb
+++ b/notebooks/figures/Results.ipynb
@@ -74,7 +74,7 @@
     "clean_bi = bimodal[bimodal['clean_flag'] == 0]\n",
     "\n",
     "print('{0} unimodal, {1} clean'.format(len(unimodal), len(clean_uni)))\n",
-    "print('{0} bimodal, {1} clean'.format(len(bimodal), len(clean_bi)))"
+    "print('{0} bimodal, {1} clean'.format(len(bimodal)//2, len(clean_bi)//2))"
    ]
   },
   {
@@ -158,23 +158,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cat = clean_uni[clean_uni['LOGG'] > 2]\n",
+    "uni_cat = clean_uni[(clean_uni['LOGG'] > 2) & np.isfinite(clean_uni['M1'])]\n",
     "\n",
     "bi_logg = np.array([AllStar.get_apogee_id(session, aid).logg \n",
     "                    for aid in clean_bi['APOGEE_ID']])\n",
-    "bi_cat = clean_bi[bi_logg > 2]\n",
-    "print(len(cat), len(bi_cat)//2)\n",
+    "bi_cat = clean_bi[(bi_logg > 2) & np.isfinite(clean_bi['M1']) & np.isfinite(clean_bi['M2_min'])]\n",
+    "print(len(uni_cat), len(bi_cat)//2)\n",
     "\n",
     "fig, axes = plt.subplots(1, 2, figsize=(11, 4.8))\n",
     "\n",
     "ax = axes[0]\n",
-    "ax.errorbar(cat['M1'].value, cat['M2_min'].value,\n",
-    "            xerr=cat['M1_err'].value,\n",
-    "            yerr=cat['M2_min_err'].value,\n",
-    "            marker='o', linestyle='none', color='k', alpha=0.8)\n",
+    "\n",
+    "uni_cats = [uni_cat[uni_cat['converged']], uni_cat[~uni_cat['converged']]]\n",
+    "uni_colors = ['k', '#aaaaaa']\n",
+    "uni_zorders = [10, -10]\n",
+    "for cat, color, zorder in zip(uni_cats, uni_colors, uni_zorders):\n",
+    "    ax.errorbar(cat['M1'].value, cat['M2_min'].value,\n",
+    "                xerr=cat['M1_err'].value,\n",
+    "                yerr=cat['M2_min_err'].value,\n",
+    "                marker='o', linestyle='none', \n",
+    "                markersize=5, color=color, alpha=0.8, zorder=zorder)\n",
     "\n",
     "ax.scatter(bi_cat['M1'].value, bi_cat['M2_min'].value,\n",
-    "           marker='o', color='tab:blue', alpha=0.8, linewidth=0, s=12)\n",
+    "           marker='s', color='tab:blue', alpha=0.8, linewidth=0, s=13)\n",
     "ax.plot(np.vstack((bi_cat['M1'].value[::2], bi_cat['M1'].value[1::2])), \n",
     "        np.vstack((bi_cat['M2_min'].value[::2], bi_cat['M2_min'].value[1::2])), \n",
     "        marker='', linestyle='-', color='tab:blue', alpha=0.4)\n",
@@ -209,14 +215,29 @@
     "\n",
     "ax = axes[1]\n",
     "\n",
-    "q = cat['M2_min'] / cat['M1']\n",
-    "asini = get_asini(cat['P'], cat['e'], cat['K'], cat['M1'], cat['M2_min'])\n",
-    "R1 = np.sqrt(G * cat['M1'] / (10**cat['LOGG']*u.cm/u.s**2)).to(u.au)\n",
-    "xerr = q * np.sqrt((cat['M2_min_err']/cat['M2_min'])**2 + (cat['M1_err']/cat['M1'])**2).value\n",
-    "ax.errorbar(q, R1/asini,\n",
-    "            xerr=xerr,\n",
-    "            # yerr= TODO\n",
-    "            marker='o', linestyle='none', color='k', alpha=0.8)\n",
+    "for cat, color, zorder in zip(uni_cats, uni_colors, uni_zorders):\n",
+    "    print(len(cat))\n",
+    "    \n",
+    "    q = cat['M2_min'] / cat['M1']\n",
+    "    asini = get_asini(cat['P'], cat['e'], cat['K'], cat['M1'], cat['M2_min'])\n",
+    "    R1 = np.sqrt(G * cat['M1'] / (10**cat['LOGG']*u.cm/u.s**2)).to(u.au)\n",
+    "    \n",
+    "    xerr = q * np.sqrt((cat['M2_min_err']/cat['M2_min'])**2 + (cat['M1_err']/cat['M1'])**2).value    \n",
+    "    ns = 10000\n",
+    "    asinis = get_asini(np.random.normal(cat['P'], cat['P_err'], (ns, len(cat)))*cat['P'].unit, \n",
+    "                       np.random.normal(cat['e'], cat['e_err'], (ns, len(cat))),\n",
+    "                       np.random.normal(cat['K'], cat['K_err'], (ns, len(cat)))*cat['K'].unit,\n",
+    "                       np.random.normal(cat['M1'], cat['M1_err'], (ns, len(cat)))*cat['M1'].unit,\n",
+    "                       np.random.normal(cat['M2_min'], cat['M2_min_err'], (ns, len(cat)))*cat['M2_min'].unit)\n",
+    "\n",
+    "    loggs = np.random.normal(cat['LOGG'], cat['LOGG_ERR'], (ns, len(cat)))\n",
+    "    R1s = np.sqrt(G * np.random.normal(cat['M1'], cat['M1_err'], (ns, len(cat)))*cat['M1'].unit / (10**loggs*u.cm/u.s**2)).to(u.au)\n",
+    "    yerr = np.std(R1s/asinis, axis=0)\n",
+    "    \n",
+    "    ax.errorbar(q, R1/asini,\n",
+    "                xerr=xerr, yerr=yerr,\n",
+    "                marker='o', linestyle='none', zorder=zorder,\n",
+    "                markersize=5, color=color, alpha=0.8)\n",
     "\n",
     "bi_logg = np.array([AllStar.get_apogee_id(session, aid).logg \n",
     "                    for aid in clean_bi['APOGEE_ID']])\n",
@@ -227,7 +248,7 @@
     "R1 = np.sqrt(G * bi_cat['M1'] / (10**bi_logg*u.cm/u.s**2)).to(u.au)\n",
     "_y = R1/asini\n",
     "ax.scatter(q, _y, \n",
-    "           marker='o', color='tab:blue', alpha=0.8, linewidth=0, s=12)\n",
+    "           marker='s', color='tab:blue', alpha=0.8, linewidth=0, s=13)\n",
     "ax.plot(np.vstack((q[::2], q[1::2])), \n",
     "        np.vstack((_y[::2], _y[1::2])), \n",
     "        marker='', linestyle='-', color='tab:blue', alpha=0.4)\n",
@@ -791,7 +812,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
