--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -838,6 +838,10 @@ visual inspection (\texttt{clean\_flag == 0}).
 We additionally restrict to stars with $\log g > 2$ to avoid upper RGB stars
 that may have coherent oscillations that mimic RV modulations from companions.
 
+\todo{Plot these stars in logg - Teff}
+
+\todo{Plot P-logg}
+
 \subsection{Companion masses and mass ratios}
 
 Most of the companions we find have minimum masses $M_{2, \textrm{min}} <
