other interesting ones

--- a/notebooks/figures/Results.ipynb
+++ b/notebooks/figures/Results.ipynb
@@ -302,10 +302,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "uni_cat[(uni_cat['M2_min'] / uni_cat['M1']) > 0.95]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The interesting 3:"
+    "### The interesting ones:"
    ]
   },
   {
@@ -323,28 +332,67 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# apogee_id = '2M04015112+5316431' # unimodal, above m2=m1 line\n",
+    "apogee_id = '2M01415794+8520066' # unimodal, just under line\n",
+    "with h5py.File(mcmc_samples_file) as f:\n",
+    "    samples = JokerSamples.from_hdf5(f[apogee_id])\n",
+    "    chain_stats = f[apogee_id]['chain-stats']\n",
+    "    print(list(chain_stats.keys()))\n",
+    "    print(chain_stats['gelman_rubin'][:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m2s = u.Quantity([get_m2_min(rows['M1'][0], samples.get_orbit(i).m_f) for i in range(len(samples))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(m2s.value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "_plot_path = '../../plots/three-interesting'\n",
     "os.makedirs(_plot_path, exist_ok=True)\n",
     "\n",
     "with h5py.File(samples_file) as f:\n",
-    "    for apogee_id in ['2M01231070+1801407', # BH\n",
-    "                      '2M04582049+2232000', # BD\n",
-    "                      '2M20130687+2044173']: # BD\n",
+    "    for apogee_id in ['2M01415794+8520066', # NS/WD??\n",
+    "                      '2M04015112+5316431', # BH/NS uni\n",
+    "                      '2M01231070+1801407', # BH/NS bi\n",
+    "                      '2M04582049+2232000', # BD bi\n",
+    "                      '2M20130687+2044173']: # BD bi\n",
     "        samples = JokerSamples.from_hdf5(f[apogee_id])\n",
     "        star = AllStar.get_apogee_id(session, apogee_id)\n",
     "        data = star.apogeervdata()\n",
     "        \n",
     "        rows = bi_cat[bi_cat['APOGEE_ID'] == apogee_id]\n",
-    "        a2s = [get_a2sini(r['P'], r['e'], r['K'], r['M1'], r['M2_min']) \n",
-    "               for r in rows]\n",
+    "        if len(rows) == 0:\n",
+    "            rows = uni_cat[uni_cat['APOGEE_ID'] == apogee_id]\n",
+    "        a2s = u.Quantity([get_a2sini(r['P'], r['e'], r['K'], r['M1'], r['M2_min']) \n",
+    "                          for r in rows])\n",
+    "        es = np.array([r['e'] for r in rows])\n",
     "        print('in Troup: {0}\\n'.format(apogee_id in troup['APOGEE_ID']) + \n",
     "              'logg = {0:.2f}, Teff = {1:.1f}\\n'.format(star.logg, star.teff) + \n",
-    "              'a2sini = {0:.3f} or {1:.3f}'.format(*a2s))\n",
+    "              'a2sini = {0}\\n'.format(a2s) + \n",
+    "              'peri = {0}'.format(a2s * (1 - es)))\n",
     "        \n",
     "        # with LAMOST RV: http://dr3.lamost.org/spectrum/view?obsid=268505101\n",
-    "        data = RVData(t=Time(np.append(data.t.mjd, [56980.]), format='mjd'),\n",
-    "                      rv=np.append(data.rv.value, 11.1)*u.km/u.s,\n",
-    "                      stddev=np.append(data.stddev.value, 1.)*u.km/u.s)\n",
+    "#         data = RVData(t=Time(np.append(data.t.mjd, [56980.]), format='mjd'),\n",
+    "#                       rv=np.append(data.rv.value, 11.1)*u.km/u.s,\n",
+    "#                       stddev=np.append(data.stddev.value, 1.)*u.km/u.s)\n",
     "        \n",
     "        fig = plot_two_panel(data, samples)\n",
     "        fig.axes[0].set_title(star.apogee_id)\n",
@@ -469,272 +517,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
-    "## Period-ecc-logg"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from scipy.stats import binned_statistic"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# bins = np.linspace(0, 3.1, 15)\n",
-    "# res15 = binned_statistic(np.log10(cat['P'].value), values=cat['e'], bins=bins,\n",
-    "#                          statistic=lambda x: np.percentile(x, 15))\n",
-    "# res50 = binned_statistic(np.log10(cat['P'].value), values=cat['e'], bins=bins,\n",
-    "#                          statistic=lambda x: np.percentile(x, 50))\n",
-    "# res85 = binned_statistic(np.log10(cat['P'].value), values=cat['e'], bins=bins,\n",
-    "#                          statistic=lambda x: np.percentile(x, 85))\n",
-    "\n",
-    "# binc = (res15.bin_edges[:-1]+res15.bin_edges[1:])/2\n",
-    "# plt.plot(binc, res15.statistic)\n",
-    "# plt.plot(binc, res50.statistic)\n",
-    "# plt.plot(binc, res85.statistic)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, axes = plt.subplots(2, 3, figsize=(12, 8.5), sharex=True, sharey=True)\n",
-    "\n",
-    "grid = np.arange(2, 3.5+0.1, 0.3)\n",
-    "for i, (l, r) in enumerate(zip(grid, grid+0.5)):\n",
-    "    mask = (cat['LOGG'] > l) & (cat['LOGG'] <= r)\n",
-    "    subcat = cat[mask]\n",
-    "    axes.flat[i].errorbar(subcat['P'].value, subcat['e'], \n",
-    "                          xerr=subcat['P_err'].value, yerr=subcat['e_err'],\n",
-    "                          marker='o', linestyle='none', alpha=0.8)\n",
-    "    axes.flat[i].axvline(10., zorder=-10, color='#aaaaaa', linestyle='--')\n",
-    "    axes.flat[i].axvline(100., zorder=-10, color='#aaaaaa', linestyle='--')\n",
-    "    axes.flat[i].text(1, 0.95, r'${0:.2f} < \\log g \\leq {1:.2f}$'.format(l, r), \n",
-    "                      ha='left', va='top', fontsize=16, backgroundcolor='w')\n",
-    "    \n",
-    "    \n",
-    "axes.flat[0].set_xlim(0.8, 1800)\n",
-    "axes.flat[0].set_ylim(-0.05, 1.)\n",
-    "axes.flat[0].set_xscale('log')\n",
-    "\n",
-    "axes[1, 1].set_xlabel('period, $P$ [day]')\n",
-    "axes[0, 0].set_ylabel('eccentricity, $e$')\n",
-    "axes[1, 0].set_ylabel('eccentricity, $e$')\n",
-    "\n",
-    "fig.tight_layout()\n",
-    "\n",
-    "fig.savefig(path.join(plot_path, 'P-e-grid.pdf'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cat = clean_uni[clean_uni['LOGG'] > 2]\n",
-    "\n",
-    "fig, axes = plt.subplots(1, 2, figsize=(9, 5.5), sharex=True)\n",
-    "\n",
-    "cs = axes[0].scatter(cat['P'], cat['LOGG'], \n",
-    "                     c=cat['e'], alpha=0.75, linewidth=0.5, \n",
-    "                     edgecolor='#333333', s=25, vmin=0, vmax=1, \n",
-    "                     cmap='magma')\n",
-    "\n",
-    "axes[0].axhline(1., color='tab:blue', linewidth=1., \n",
-    "                linestyle='--', zorder=-100)\n",
-    "\n",
-    "axes[0].set_xlabel(r'$P$ [day]')\n",
-    "axes[0].set_ylabel(r'$\\log g$')\n",
-    "\n",
-    "axes[0].set_xlim(0.4, 3000)\n",
-    "axes[0].set_ylim(4, 0)\n",
-    "axes[0].set_xscale('log')\n",
-    "\n",
-    "cax = fig.add_axes([0.11, 0.85, 0.402, 0.03])\n",
-    "cb = fig.colorbar(cs, cax=cax, orientation='horizontal')\n",
-    "cb.ax.xaxis.set_ticks_position('top')\n",
-    "cb.ax.xaxis.set_label_position('top')\n",
-    "cb.set_ticks(np.arange(0, 1+0.1, 0.2))\n",
-    "cb.set_label('$e$', labelpad=10)\n",
-    "cb.solids.set_rasterized(True) \n",
-    "cb.solids.set_edgecolor('face')\n",
-    "\n",
-    "# ---\n",
-    "\n",
-    "cs = axes[1].scatter(cat['P'], cat['e'], \n",
-    "                     c=cat['LOGG'], alpha=0.75, linewidth=0.5, \n",
-    "                     edgecolor='#333333', s=25, vmin=1, vmax=4, \n",
-    "                     cmap='viridis')\n",
-    "\n",
-    "axes[1].scatter(cat['P'][cat['DR14RC']], cat['e'][cat['DR14RC']], \n",
-    "                linewidth=1, edgecolor='tab:red', facecolor='none', s=40,\n",
-    "                marker='o', zorder=100)\n",
-    "\n",
-    "axes[1].axhline(1., color='tab:blue', linewidth=1., \n",
-    "                linestyle='--', zorder=-100)\n",
-    "\n",
-    "# axes[1].set_ylabel(r'$P / P_{\\rm surface}$')\n",
-    "axes[1].set_ylabel(r'eccentricity, $e$')\n",
-    "\n",
-    "axes[1].set_ylim(-0.05, 1)\n",
-    "# axes[1].set_yscale('log')\n",
-    "axes[1].yaxis.set_ticks(np.arange(0, 1+0.2, 0.2))\n",
-    "\n",
-    "cax = fig.add_axes([0.565, 0.85, 0.402, 0.03])\n",
-    "cb = fig.colorbar(cs, cax=cax, orientation='horizontal')\n",
-    "cb.ax.xaxis.set_ticks_position('top')\n",
-    "cb.ax.xaxis.set_label_position('top')\n",
-    "cb.set_label(r'$\\log g$', labelpad=10)\n",
-    "cb.solids.set_rasterized(True) \n",
-    "cb.solids.set_edgecolor('face')\n",
-    "\n",
-    "fig.tight_layout()\n",
-    "fig.subplots_adjust(top=0.8, wspace=0.125)\n",
-    "\n",
-    "# fig.savefig(path.join(plot_path, 'P-logg-e.pdf'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cat = clean_uni[clean_uni['LOGG'] > 2]\n",
-    "\n",
-    "fig, axes = plt.subplots(1, 2, figsize=(10.5, 5.), sharey=True)\n",
-    "\n",
-    "P_surface = period_at_surface(1.36*u.Msun, cat['LOGG'], \n",
-    "                              cat['e'], 0.5*u.Msun)\n",
-    "\n",
-    "cs = axes[0].scatter(cat['e'], cat['P']/P_surface, \n",
-    "                     c=cat['LOGG'], alpha=0.75, linewidth=0.5, \n",
-    "                     edgecolor='#333333', s=25, vmin=2, vmax=4, \n",
-    "                     cmap='viridis')\n",
-    "\n",
-    "axes[0].scatter(cat['e'][cat['DR14RC']], (cat['P']/P_surface)[cat['DR14RC']], \n",
-    "                linewidth=1, edgecolor='tab:red', facecolor='none', s=40,\n",
-    "                marker='o', zorder=100)\n",
-    "\n",
-    "axes[0].axhline(1., color='tab:blue', linewidth=1., \n",
-    "                linestyle='--', zorder=-100, marker='')\n",
-    "\n",
-    "axes[0].set_ylabel(r'$P / P_{\\rm surface}$')\n",
-    "axes[0].set_xlabel(r'eccentricity, $e$')\n",
-    "\n",
-    "axes[0].set_xlim(-0.05, 1)\n",
-    "axes[0].set_ylim(0.4, 2000)\n",
-    "axes[1].set_yscale('log')\n",
-    "axes[0].xaxis.set_ticks(np.arange(0, 1+0.2, 0.2))\n",
-    "\n",
-    "# ---\n",
-    "\n",
-    "cs = axes[1].scatter(cat['K'], cat['P']/P_surface, \n",
-    "                     c=cat['LOGG'], alpha=0.75, linewidth=0.5, \n",
-    "                     edgecolor='#333333', s=25, vmin=2, vmax=4, \n",
-    "                     cmap='viridis')\n",
-    "\n",
-    "axes[1].axhline(1., color='tab:blue', linewidth=1., \n",
-    "                linestyle='--', zorder=-100, marker='')\n",
-    "\n",
-    "axes[1].set_xlim(1, 250)\n",
-    "axes[1].set_xscale('log')\n",
-    "axes[1].set_xlabel('RV amplitude, $K$ [{0:latex_inline}]'.format(u.km/u.s))\n",
-    "\n",
-    "cax = fig.add_axes([0.87, 0.185, 0.02, 0.76])\n",
-    "cb = fig.colorbar(cs, cax=cax)\n",
-    "cb.ax.xaxis.set_ticks_position('top')\n",
-    "cb.ax.xaxis.set_label_position('top')\n",
-    "cb.set_label(r'$\\log g$', labelpad=10)\n",
-    "cb.solids.set_rasterized(True) \n",
-    "cb.solids.set_edgecolor('face')\n",
-    "cb.set_ticks(np.arange(2, 4+0.1, 0.5))\n",
-    "\n",
-    "fig.tight_layout()\n",
-    "fig.subplots_adjust(right=0.85)\n",
-    "\n",
-    "# fig.savefig(path.join(plot_path, 'P-e-K.pdf'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cat = clean_uni[clean_uni['LOGG'] > 2]\n",
-    "\n",
-    "fig, ax = plt.subplots(1, 1, figsize=(6, 5))\n",
-    "\n",
-    "bins = np.linspace(0, 1, 15)\n",
-    "bin_c = (bins[:-1]+bins[1:]) / 2\n",
-    "# cut = cat['P'] < 10*u.day\n",
-    "\n",
-    "P_surface = period_at_surface(1.36*u.Msun, cat['LOGG'], \n",
-    "                              cat['e'], 0.5*u.Msun)\n",
-    "cut = (cat['P']/P_surface) < 8\n",
-    "\n",
-    "# ax.hist(cat['e'][cut], bins=bins, \n",
-    "#         alpha=0.5, normed=True, rasterized=True,\n",
-    "#         label=r'$P < 20\\,{\\rm d}$' + '  $(N = {0})$'.format(cut.sum()));\n",
-    "# ax.hist(cat['e'][~cut], bins=bins, \n",
-    "#         alpha=0.5, normed=True, rasterized=True,\n",
-    "#         label=r'$P \\geq 20\\,{\\rm d}$' + '  $(N={0})$'.format(np.logical_not(cut).sum()));\n",
-    "\n",
-    "n, *_ = np.histogram(cat['e'][cut], bins=bins, normed=True)\n",
-    "ax.plot(bin_c, n, \n",
-    "        alpha=0.9, drawstyle='steps-mid', marker='', lw=2.,\n",
-    "        label=r'$P < 10\\,{\\rm d}$' + '  $(N = {0})$'.format(cut.sum()));\n",
-    "\n",
-    "n, *_ = np.histogram(cat['e'][~cut], bins=bins, normed=True)\n",
-    "ax.plot(bin_c, n, \n",
-    "        alpha=0.9, drawstyle='steps-mid', marker='', lw=2.,\n",
-    "        label=r'$P \\geq 10\\,{\\rm d}$' + '  $(N={0})$'.format(np.logical_not(cut).sum()));\n",
-    "\n",
-    "egrid = np.linspace(0, 1, 256)\n",
-    "ax.plot(egrid, beta.pdf(egrid, 0.867, 3.03),\n",
-    "        marker='', linestyle='--', color='k', alpha=0.4,\n",
-    "        label='prior', zorder=-10)\n",
-    "\n",
-    "ax.legend(loc='best', fontsize=16)\n",
-    "ax.set_xlabel('eccentricity, $e$')\n",
-    "ax.set_ylabel('$p(e)$')\n",
-    "\n",
-    "ax.set_xlim(-0.02, 1.02)\n",
-    "ax.set_yscale('log')\n",
-    "ax.set_ylim(8E-2, 2E1)\n",
-    "\n",
-    "fig.tight_layout()\n",
-    "\n",
-    "# fig.savefig(path.join(plot_path, 'ecc-dist.pdf'), dpi=250)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "TODO:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.hist(cat['FE_H'], bins=np.linspace(-2.5, 0.75, 18));"
+    "# Period-logg"
    ]
   },
   {
@@ -743,50 +526,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Old idea: compute M2_min assuming M1 = 1.5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cat = clean_cat.copy()\n",
-    "print(np.isfinite(cat['M2_min']).sum())\n",
-    "\n",
-    "rnd = np.random.RandomState(seed=42)\n",
-    "N = rnd.normal\n",
-    "\n",
-    "n_samples = 1024\n",
-    "for i, row in tqdm.tqdm(enumerate(cat)):\n",
-    "    if np.isfinite(row['M2_min']):\n",
-    "        continue\n",
-    "        \n",
-    "    m1_samples = N(1.5, 0.4, size=n_samples) * u.Msun\n",
-    "    mass_func = mf(P=N(row['P'].value, row['P_err'].value, n_samples) * row['P'].unit, \n",
-    "                   K=N(row['K'].value, row['K_err'].value, n_samples) * row['K'].unit,\n",
-    "                   e=N(row['e'], row['e_err'], n_samples))\n",
-    "    m2_mins = get_m2_min(m1_samples, mass_func)\n",
-    "    \n",
-    "    row['M1'] = np.median(m1_samples)\n",
-    "    row['M1_err'] = 1.5 * median_absolute_deviation(m1_samples)\n",
-    "    \n",
-    "    row['M2_min'] = np.nanmedian(m2_mins)\n",
-    "    row['M2_min_err'] = 1.5 * median_absolute_deviation(m2_mins, ignore_nan=True)"
-   ]
   },
   {
    "cell_type": "code",
